@@ -1,42 +1,35 @@
 package ua.com.fielden.platform.eql.meta;
 
-import static java.lang.String.format;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.unmodifiableMap;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toSet;
-import static ua.com.fielden.platform.domaintree.impl.AbstractDomainTreeRepresentation.isExcluded;
-import static ua.com.fielden.platform.entity.AbstractEntity.VERSION;
-import static ua.com.fielden.platform.eql.meta.EntityCategory.QUERY_BASED;
-import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getEntityTitleAndDesc;
-import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getTitleAndDesc;
-import static ua.com.fielden.platform.utils.EntityUtils.isPersistedEntityType;
-import static ua.com.fielden.platform.utils.EntityUtils.isUnionEntityType;
-
-import java.sql.PreparedStatement;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
+import com.google.common.collect.Iterators;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-
-import com.google.common.collect.Iterators;
-
 import ua.com.fielden.platform.dao.exceptions.DbException;
 import ua.com.fielden.platform.dao.session.TransactionalExecution;
 import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.entity.AbstractUnionEntity;
+import ua.com.fielden.platform.meta.*;
 import ua.com.fielden.platform.types.Money;
-import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.utils.EntityUtils;
 import ua.com.fielden.platform.utils.Pair;
+
+import javax.annotation.Nullable;
+import java.sql.PreparedStatement;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.util.*;
+import java.util.stream.Stream;
+
+import static java.lang.String.format;
+import static java.util.Collections.emptyList;
+import static java.util.Collections.unmodifiableMap;
+import static java.util.stream.Collectors.toSet;
+import static ua.com.fielden.platform.domaintree.impl.AbstractDomainTreeRepresentation.isExcluded;
+import static ua.com.fielden.platform.entity.AbstractEntity.VERSION;
+import static ua.com.fielden.platform.meta.PropertyMetadataKeys.REQUIRED;
+import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getEntityTitleAndDesc;
+import static ua.com.fielden.platform.reflection.TitlesDescsGetter.getTitleAndDesc;
+import static ua.com.fielden.platform.utils.EntityUtils.entityTypeHierarchy;
+import static ua.com.fielden.platform.utils.EntityUtils.isUnionEntityType;
 
 /**
  * Performs instant (re-)persistence of the Domain Metadata Model entities, generated for an application domain.
@@ -56,12 +49,10 @@ public class PersistDomainMetadataModel {
      * Synchronises persistent model of Domain Explorer entities with an actual application domain.
      *
      * @param entityTypes - domain entities to be included into metadata model entities data.
-     * @param domainMetadata
-     * @param trEx
      */
     public static void persist(
             final List<Class<? extends AbstractEntity<?>>> entityTypes,
-            final EqlDomainMetadata domainMetadata,
+            final IDomainMetadata domainMetadata,
             final TransactionalExecution trEx) {
         LOGGER.info("Starting to save the domain metadata...");
         try {
@@ -75,7 +66,7 @@ public class PersistDomainMetadataModel {
             persistDomainTypesData(typesMap.values(), trEx, 1000);
 
             LOGGER.info("Inserting metadata about domain entity properties...");
-            persistDomainPropsData(generateDomainPropsData(typesMap), trEx, 1000);
+            persistDomainPropsData(generateDomainPropsData(domainMetadata, typesMap), trEx, 1000);
 
             LOGGER.info("Completed saving of the domain metadata.");
         } catch (final Exception ex) {
@@ -94,31 +85,59 @@ public class PersistDomainMetadataModel {
         });
     }
 
-    private static Map<Class<?>, DomainTypeData> generateDomainTypeData(final Set<Class<? extends AbstractEntity<?>>> entityTypes, final EqlDomainMetadata domainMetadata) {
+    private static Map<Class<?>, DomainTypeData> generateDomainTypeData(final Set<Class<? extends AbstractEntity<?>>> entityTypes, final IDomainMetadata domainMetadata) {
         final Map<Class<?>, DomainTypeData> result = new HashMap<>();
         long id = 0;
-        final Map<Class<? extends AbstractEntity<?>>, EqlEntityMetadata<?>> entitiesMetadataMap = domainMetadata.entityPropsMetadata();
         for (final Class<? extends AbstractEntity<?>> entityType : entityTypes) {
-            final EqlEntityMetadata<?> entityMd = entitiesMetadataMap.get(entityType);
-            if (entityMd != null) {
-                id = id + 1;
-                final Pair<String, String> typeTitleAndDesc = getEntityTitleAndDesc(entityType);
-                final List<EqlPropertyMetadata> propsMd = entityMd.props().stream().filter(pm -> !pm.name.equals(VERSION) && !pm.isVirtualKey()).collect(toList());
-                final Class<?> superType = entityMd.typeInfo.category == QUERY_BASED && isPersistedEntityType(entityType.getSuperclass()) ? entityType.getSuperclass() : null;
-                final String tableName = superType == null ? entityMd.typeInfo.tableName : entitiesMetadataMap.get(superType).typeInfo.tableName;
-                result.put(entityType, new DomainTypeData(entityType, superType, id, entityType.getName(), typeTitleAndDesc.getKey(), true, tableName, typeTitleAndDesc.getValue(), propsMd.size(), entityMd.typeInfo.compositeKeyMembers, propsMd));
+            final var em = domainMetadata.forEntity(entityType);
+            id = id + 1;
+            final Pair<String, String> typeTitleAndDesc = getEntityTitleAndDesc(entityType);
+            final List<? extends PropertyMetadata> props = em.properties().stream()
+                    .filter(pm -> !pm.name().equals(VERSION) && !pm.type().isCollectional() && !pm.type().isCompositeKey()
+                                  && !(pm.isPlain() && em.isPersistent()))
+                    .toList();
 
-                // collecting primitive, union,custom user types and pure types (like XXXGroupingProperty) from props
-                for (final EqlPropertyMetadata pmd : propsMd) {
-                    if ((!entitiesMetadataMap.containsKey(pmd.javaType) || !entityTypes.contains(pmd.javaType)) && !result.containsKey(pmd.javaType)) {
-                        id = id + 1;
-                        final List<EqlPropertyMetadata> subItems = pmd.subitems.stream().filter(si -> si.column != null).collect(toList());
-                        final int propsCount = !subItems.isEmpty() && !(Money.class.equals(pmd.javaType) && subItems.size() == 1) ? subItems.size() : 0;
-                        final Pair<String, String> subTypeTitleAndDesc = isUnionEntityType(pmd.javaType) ? getEntityTitleAndDesc((Class<? extends AbstractUnionEntity>) pmd.javaType) : null;
-                        final String title = subTypeTitleAndDesc != null ? subTypeTitleAndDesc.getKey() : pmd.javaType.getSimpleName();
-                        final String titleDesc = subTypeTitleAndDesc != null ? subTypeTitleAndDesc.getValue() : pmd.javaType.getSimpleName();
-                        result.put(pmd.javaType, new DomainTypeData(pmd.javaType, null, id, pmd.javaType.getName(), title, false, null, titleDesc, propsCount, emptyList(), emptyList()));
-                    }
+            final Optional<EntityMetadata.Persistent> persistentBase = persistentBaseForSynthetic(domainMetadata, em);
+            final Optional<String> tableName = persistentBase.or(em::asPersistent).map(pem -> pem.data().tableName());
+
+            result.put(entityType,
+                       new DomainTypeData(entityType, persistentBase.map(EntityMetadata::javaType).orElse(null),
+                                          id, entityType.getName(), typeTitleAndDesc.getKey(),
+                                          true, tableName.orElse(null), typeTitleAndDesc.getValue(), props.size(),
+                                          domainMetadata.entityMetadataUtils().compositeKeyMembers(em),
+                                          props));
+
+            // collecting primitive, union,custom user types and pure types (like XXXGroupingProperty) from props
+            for (final PropertyMetadata pm : props) {
+                final Optional<Class<?>> optPropJavaType = switch (pm.type()) {
+                    case PropertyTypeMetadata.Composite    it -> Optional.of(it.javaType());
+                    case PropertyTypeMetadata.Primitive    it -> Optional.of(it.javaType());
+                    case PropertyTypeMetadata.Entity       it when domainMetadata.forType(it.javaType()).isEmpty()
+                                                                   || !entityTypes.contains(it.javaType())
+                                                                      && !result.containsKey(it.javaType())
+                            -> Optional.of(it.javaType());
+                    default -> Optional.empty();
+                };
+
+                if (optPropJavaType.isPresent()) {
+                    // can't use ifPresent due to local variable "id"
+                    final Class<?> propJavaType = optPropJavaType.get();
+                    id = id + 1;
+
+                    final List<PropertyMetadata.Persistent> subItems = domainMetadata.propertyMetadataUtils().subProperties(pm).stream()
+                            .map(PropertyMetadata::asPersistent).flatMap(Optional::stream)
+                            .toList();
+
+                    final int propsCount = !subItems.isEmpty() && !(Money.class.equals(propJavaType) && subItems.size() == 1)
+                            ? subItems.size() : 0;
+                    final Pair<String, String> subTypeTitleAndDesc = isUnionEntityType(propJavaType)
+                            ? getEntityTitleAndDesc((Class<? extends AbstractUnionEntity>) propJavaType)
+                            : null;
+                    final String title = subTypeTitleAndDesc != null ? subTypeTitleAndDesc.getKey() : propJavaType.getSimpleName();
+                    final String titleDesc = subTypeTitleAndDesc != null ? subTypeTitleAndDesc.getValue() : propJavaType.getSimpleName();
+                    result.put(propJavaType,
+                               new DomainTypeData(propJavaType, null, id, propJavaType.getName(), title, false,
+                                                  null, titleDesc, propsCount, emptyList(), emptyList()));
                 }
             }
         }
@@ -126,7 +145,23 @@ public class PersistDomainMetadataModel {
         return result;
     }
 
-    private static List<DomainPropertyData> generateDomainPropsData(final Map<Class<?>, DomainTypeData> typesMap) {
+    /**
+     * If given a synthetic-based-on-persistent entity, returns the persistent type it's based on.
+     */
+    private static Optional<EntityMetadata.Persistent> persistentBaseForSynthetic(final IDomainMetadata domainMetadata,
+                                                                                  final EntityMetadata em) {
+        return em.asSynthetic()
+                .map(EntityMetadata::javaType)
+                .map(entityType -> entityTypeHierarchy(entityType, false).skip(1))
+                .orElseGet(Stream::empty)
+                .flatMap(entityType -> domainMetadata.forEntityOpt(entityType).flatMap(EntityMetadata::asPersistent).stream())
+                .findFirst();
+    }
+
+    private static List<DomainPropertyData> generateDomainPropsData
+    (final IDomainMetadata domainMetadata, final Map<Class<?>, DomainTypeData> typesMap)
+    {
+        final PropertyMetadataUtils pmUtils = domainMetadata.propertyMetadataUtils();
         final List<DomainPropertyData> result = new ArrayList<>();
 
         long id = typesMap.size();
@@ -135,49 +170,56 @@ public class PersistDomainMetadataModel {
                 continue;
             }
             int position = 0;
-            for (final EqlPropertyMetadata propMd : entityType.getProps().values()) {
-                if (isExcluded(entityType.type, propMd.name)) {
+            for (final PropertyMetadata pm : entityType.getProps().values()) {
+                if (isExcluded(entityType.type, pm.name())) {
                     continue;
                 }
+
                 id = id + 1;
                 position = position + 1;
-                final Pair<String, String> prelTitleAndDesc = getTitleAndDesc(propMd.name, entityType.type);
+                final Pair<String, String> prelTitleAndDesc = getTitleAndDesc(pm.name(), entityType.type);
                 final String prelTitle = prelTitleAndDesc.getKey();
                 final String prelDesc = prelTitleAndDesc.getValue();
 
+                final var propJavaType = (Class<?>) pm.type().javaType();
                 final DomainTypeData superTypeDtd = typesMap.get(entityType.superType);
                 result.add(new DomainPropertyData(id, //
-                        propMd.name, //
-                        entityType.id, //
-                        null, //
-                        typesMap.get(propMd.javaType).id, //
-                        prelTitle, //
-                        prelDesc, //
-                        entityType.getKeyMemberIndex(propMd.name), //
-                        propMd.required, //
-                        determinePropColumn(entityType.superType == null ? propMd
-                                : superTypeDtd.getProps().get(propMd.name) != null ? superTypeDtd.getProps().get(propMd.name) : propMd), //
-                        position));
+                                                  pm.name(), //
+                                                  entityType.id, //
+                                                  null, //
+                                                  typesMap.get(propJavaType).id, //
+                                                  prelTitle, //
+                                                  prelDesc, //
+                                                  entityType.getKeyMemberIndex(pm.name()), //
+                                                  pm.is(REQUIRED), //
+                                                  determinePropColumn(pmUtils,
+                                                                      entityType.superType == null
+                                                                              ? pm
+                                                                              : superTypeDtd.getProps().get(pm.name()) != null
+                                                                                      ? superTypeDtd.getProps().get(pm.name())
+                                                                                      : pm), //
+                                                  position));
 
                 // adding subproperties of union type properties
-                if (propMd.subitems.size() > 1) { //skipping cases of SimpleMoney with single subproperty
+                if (pmUtils.isPropEntityType(pm.type(), EntityMetadata::isUnion)) {
+                    final List<PropertyMetadata> subProps = pmUtils.subProperties(pm);
                     final long holderId = id;
                     int subItemPosition = 0;
-                    for (final EqlPropertyMetadata subProp : propMd.subitems.stream().filter(el -> el.column != null).collect(toList())) {
+                    for (final var spm : subProps.stream().flatMap(spm -> spm.asPersistent().stream()).toList()) {
                         id = id + 1;
                         subItemPosition = subItemPosition + 1;
-                        final Pair<String, String> titleAndDesc = getTitleAndDesc(subProp.name, propMd.javaType);
+                        final Pair<String, String> titleAndDesc = getTitleAndDesc(spm.name(), propJavaType);
                         result.add(new DomainPropertyData(id, //
-                                subProp.name, //
-                                null, //
-                                holderId, //
-                                typesMap.get(subProp.javaType).id, //
-                                titleAndDesc.getKey(), //
-                                titleAndDesc.getValue(), //
-                                null, //
-                                false, //
-                                subProp.column.name, //
-                                subItemPosition));
+                                                          spm.name(), //
+                                                          null, //
+                                                          holderId, //
+                                                          typesMap.get((Class<?>) spm.type().javaType()).id, //
+                                                          titleAndDesc.getKey(), //
+                                                          titleAndDesc.getValue(), //
+                                                          null, //
+                                                          false, //
+                                                          spm.data().column().name, //
+                                                          subItemPosition));
                     }
                 }
             }
@@ -186,13 +228,18 @@ public class PersistDomainMetadataModel {
         return result;
     }
 
-    private static String determinePropColumn(final EqlPropertyMetadata propMd) {
-        if (propMd.critOnly) {
-            return CRITERION;
-        }
-        return propMd.column != null
-               ? propMd.column.name
-               : (propMd.subitems.size() == 1 ? (propMd.subitems.get(0).column != null ? propMd.subitems.get(0).column.name : null) : null);
+    private static @Nullable String determinePropColumn(final PropertyMetadataUtils pmUtils, final PropertyMetadata pm) {
+        return switch (pm) {
+            case PropertyMetadata.CritOnly $ -> CRITERION;
+            case PropertyMetadata.Persistent ppm ->
+                    pmUtils.isPropEntityType(ppm, EntityMetadata::isUnion) ? null : ppm.data().column().name;
+            default -> {
+                final var subProps = pmUtils.subProperties(pm);
+                yield subProps.size() == 1
+                        ? subProps.getFirst().asPersistent().map(pspm -> pspm.data().column().name).orElse(null)
+                        : null;
+            }
+        };
     }
 
     private static void persistDomainTypesData(final Collection<DomainTypeData> dtd, final TransactionalExecution trEx, final int batchSize) {
@@ -296,9 +343,9 @@ public class PersistDomainMetadataModel {
         private final String entityTypeDesc;
         private final int propsCount;
         private final Map<String, Integer> keyMembersIndices = new HashMap<>();
-        private final Map<String, EqlPropertyMetadata> props = new LinkedHashMap<>();
+        private final Map<String, PropertyMetadata> props = new LinkedHashMap<>();
 
-        public DomainTypeData(final Class<?> type, final Class<?> superType, final long id, final String key, final String desc, final boolean isEntity, final String dbTable, final String entityTypeDesc, final int propsCount, final List<T2<String, Class<?>>> keyMembers, final List<EqlPropertyMetadata> props) {
+        public DomainTypeData(final Class<?> type, final Class<?> superType, final long id, final String key, final String desc, final boolean isEntity, final String dbTable, final String entityTypeDesc, final int propsCount, final List<? extends PropertyMetadata> keyMembers, final List<? extends PropertyMetadata> props) {
             this.type = type;
             this.superType = superType;
             this.id = id;
@@ -308,14 +355,14 @@ public class PersistDomainMetadataModel {
             this.dbTable = dbTable;
             this.entityTypeDesc = entityTypeDesc;
             this.propsCount = propsCount;
-            for (final EqlPropertyMetadata prop : props) {
-                this.props.put(prop.name, prop);
+            for (final PropertyMetadata prop : props) {
+                this.props.put(prop.name(), prop);
             }
 
             int i = 0;
-            for (final T2<String, Class<?>> element : keyMembers) {
+            for (final PropertyMetadata km : keyMembers) {
                 i = i + 1;
-                keyMembersIndices.put(element._1, i);
+                keyMembersIndices.put(km.name(), i);
             }
 
             if (keyMembersIndices.isEmpty()) {
@@ -327,7 +374,7 @@ public class PersistDomainMetadataModel {
             return keyMembersIndices.get(keyMember);
         }
 
-        public Map<String, EqlPropertyMetadata> getProps() {
+        public Map<String, PropertyMetadata> getProps() {
             return unmodifiableMap(props);
         }
     }
